# llmledger

./: .gitignore  ARCHITECTURE.md  BACKLOG.md  BACKLOG_REVIEW.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRICING_CHANGELOG.md  README.md  README.ru.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  api.ru.md  budget-vs-guard.md  budget-vs-guard.ru.md  comparison.md  comparison.ru.md  connecting.md  connecting.ru.md  faq.md  faq.ru.md  index.md  index.ru.md  performance.md  performance.ru.md  security.md  security.ru.md
docs/detectors/: baseline.md  baseline.ru.md  budget.md  budget.ru.md  cusum.md  cusum.ru.md  frequency.md  frequency.ru.md  rules.md  rules.ru.md
examples/: basic_tracking.py  full_pipeline.py
models/v1/: metadata.json  model.pkl  model.skops
scripts/: bench.py  soak_follow.py
src/llm_burnwatch/: __init__.py  _messages.py  alert_schema.json  alert_text.py  cli.py  dashboard.py  demo_data.py  logreader.py  pricing_import.py  schema.json  tracker.py  validation.py
src/llm_burnwatch/anomaly/: constants.py  features.py  registry.py  train.py
src/llm_burnwatch/detectors/: cusum_detector.py  engine.py  frequency_detector.py
src/llm_burnwatch/sinks/: slack_sink.py  telegram_sink.py
src/llmledger/: __init__.py  _messages.py  cli.py  dashboard.py  demo_data.py  logreader.py  pricing.json  schema.json  tracker.py  validation.py
src/llmledger/anomaly/: baseline.py  constants.py  features.py  registry.py  train.py
tests/: conftest.py  test_anomaly_sanity.py  test_baseline.py  test_baseline_properties.py  test_cli.py  test_cli_budget.py  test_cusum_detector.py  test_dashboard.py  test_detect_follow.py  test_features.py  test_frequency_detector.py  test_logreader.py  test_messages.py  test_package.py  test_pricing_import.py  test_registry.py  test_schema.py  test_sinks_slack.py  test_sinks_telegram.py  test_tracker.py  test_tracker_guard.py  test_tracker_langchain_adapter.py  test_tracker_litellm_adapter.py  test_train.py  test_validation.py
