[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llmledger"
version = "0.2.0"
description = "Local, zero-dependency cost tracking and anomaly detection for LLM/agent calls"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "llmledger" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
anomaly = ["scikit-learn>=1.3,<2.0", "skops>=0.13,<1.0"]
dev = ["pytest>=7.4", "jsonschema>=4.0"]

[project.scripts]
llmledger = "llmledger.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llmledger = ["pricing.json", "schema.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
