[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-burnwatch"
version = "0.9.0"
description = "Local, zero-dependency cost tracking and anomaly detection for LLM/agent calls"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "chemodannebro-rgb" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
anomaly = ["scikit-learn>=1.3,<2.0", "skops>=0.13,<1.0"]
dev = ["pytest>=7.4", "jsonschema>=4.0", "hypothesis>=6.0"]

[project.urls]
Homepage = "https://github.com/chemodannebro-rgb/llm-burnwatch"
Repository = "https://github.com/chemodannebro-rgb/llm-burnwatch"
Issues = "https://github.com/chemodannebro-rgb/llm-burnwatch/issues"

[project.scripts]
llm-burnwatch = "llm_burnwatch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm_burnwatch = ["pricing.json", "schema.json", "alert_schema.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
